src/objects/Asset_Concept__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Picklist with values as 
If  A/V then categories are trailers and Tv Spots, else if Print Creative then Living 1 Sheet and Logos</description>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A/V Creative</fullName>
                </value>
                <value>
                    <fullName>Print Creative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Categories for the types field</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Asset_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trailers</fullName>
                </value>
                <value>
                    <fullName>TV Spots</fullName>
                </value>
                <value>
                    <fullName>Living 1 Sheet</fullName>
                </value>
                <value>
                    <fullName>Logos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Embargo_Date__c</fullName>
        <description>Gives the date for Embargo. This is a required field if Embargo status is &apos;With Embargo&apos;</description>
        <label>Embargo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Embargo_Status__c</fullName>
        <description>Gives the Status of Embargo for the Particular Asset</description>
        <label>Embargo Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Embargo_Status_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asset Concepts</relationshipLabel>
        <relationshipName>Asset_Concepts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <referenceTo>Title__c</referenceTo>
        <relationshipLabel>Asset Concepts</relationshipLabel>
        <relationshipName>Asset_Concept_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Asset Concept</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Asset_View</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Embargo_Date__c</columns>
        <columns>Embargo_Status__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Type__c</field>
            <operation>equals</operation>
            <value>A/V Creative</value>
        </filters>
        <filters>
            <field>Embargo_Status__c</field>
            <operation>equals</operation>
            <value>With Embargo</value>
        </filters>
        <label>Asset View</label>
    </listViews>
    <nameField>
        <label>Asset Concept Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Concepts</pluralLabel>
    <recordTypes>
        <fullName>Asset_Record_Type</fullName>
        <active>true</active>
        <description>this is a record type which gives different page layouts for A/V creative and print creative</description>
        <label>Asset Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Embargo_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Embargo_Status__c , &quot;With Embargo&quot;) ,  ISBLANK( Embargo_Date__c ), NULL)</errorConditionFormula>
        <errorDisplayField>Embargo_Date__c</errorDisplayField>
        <errorMessage>Embargo Date is to be entered!!</errorMessage>
    </validationRules>
</CustomObject>